--- a/frontend/src/app/component/home/home.component.html
+++ b/frontend/src/app/component/home/home.component.html
@@ -4,8 +4,7 @@
     <h1
         class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl">
         Découvrez la localisation en temps réel de vos transports</h1>
-    <p class="mb-6 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48">Here we focus on markets where technology, innovation, and capital can unlock long-term value and drive economic
-        growth.</p>
+    <p class="mb-6 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48">Bienvenue sur ce site dédié à la surveillance de vos déplacements.</p>
     <a [routerLink]="'/tracking'"
         class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:ring-blue-300">
         Commencer
