--- a/frontend/src/app/component/header/header.component.html
+++ b/frontend/src/app/component/header/header.component.html
@@ -7,7 +7,7 @@
                   </svg>                  
                 <span class="ml-2 self-center text-xl font-semibold whitespace-nowrap">Tracking GPS</span>
             </a> 
-            <a href="#" class="hover:bg-green-200 focus:ring-4 focus:ring-green-300  rounded-lg text-xl font-semibold whitespace-nowrap px-4 lg:px-5 py-2 lg:py-2.5 mr-2">Documentation</a>
+            <a [routerLink]="'/doc'" class="hover:bg-green-200 focus:ring-4 focus:ring-green-300  rounded-lg text-xl font-semibold whitespace-nowrap px-4 lg:px-5 py-2 lg:py-2.5 mr-2">Documentation</a>
         </div>
     </nav>
 </header>
