--- a/frontend/src/app/component/tracking/tracking.component.html
+++ b/frontend/src/app/component/tracking/tracking.component.html
@@ -1,7 +1,6 @@
 <app-header></app-header>
 
-<div id="content" class="px-96 pt-20">
-    <div id="map" style="height: 500px;" leaflet [leafletOptions]="options" [leafletLayers]="layers">
-    </div>
-    <p></p>
+<div>
 </div>
+
+<div class="mx-32 my-10" id="map" style="height: 500px;" leaflet [leafletOptions]="options" [leafletLayers]="layers"></div>
