--- a/frontend/src/app/component/trackingsocket/trackingsocket.component.html
+++ b/frontend/src/app/component/trackingsocket/trackingsocket.component.html
@@ -1,7 +1,6 @@
 <app-header></app-header>
 
-<div  class="mt-10">
-    <p></p>
+<div>
 </div>
 
 <div class="mx-32 my-10" id="map" style="height: 500px;" leaflet [leafletOptions]="options" [leafletLayers]="layers">
